# gtest-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/libA/src/: CMakeLists.txt  LibA.cpp  LibA.h
lib/libA/test/: CMakeLists.txt  LibATest.cpp
lib/libB/src/: CMakeLists.txt  LibB.cpp  LibB.h
lib/libB/test/: CMakeLists.txt  LibBTest.cpp
test/: CMakeLists.txt  main.cpp
